[package]
name = "app_ctx"
version = "0.1.5"
edition = "2021"
authors = ["zhongyi"]
description = "An AppCtx implementation in Rust, like ApplicationContext in SpringBoot"
readme = "README.md"
license = "MIT"
repository = "https://github.com/zhongyi51/app_ctx"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
async-trait = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = {version = "1",features=["test-util","macros"]}
anyhow = "1"